test/files/neg/t2066b.check
t2066b.scala:7: error: overriding def f[T[_]](x: T[Int]): T[Any] (defined in trait A);
 def f[T[+_]](x: T[Int]): T[Any] has incompatible type
	 def f[T[+_]](x : T[Int]) : T[Any] = x
             ^
one error found
